--- a/src/Style.css
+++ b/src/Style.css
@@ -208,3 +208,69 @@
     left: 1092px;
     top: 60px;
   }
+
+  .button-voltar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 30px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    word-wrap: break-word;
+    cursor: pointer;
+    background: #820B8A;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 40px;
+    border: 1px black solid;
+    position: absolute;
+    width: 258px;
+    height: 76px;
+    left: 612.5px;
+    top: 470px;
+  }
+
+  .popup-background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /
+  }
+  
+  .popup-container {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 30px;
+    gap: 20px;
+  }
+
+  .buttons-container {
+    display: flex;
+    justify-content: center; 
+    gap: 20px; 
+  }
+  
+  .popup-actions {
+    display: flex;
+    justify-content: space-around; 
+    width: 100%; 
+    padding: 10px;
+  }
+
+  .pop-yes-button, .pop-no-button {
+    background-color: #820B8A; 
+    color: white; 
+    border: none; 
+    padding: 10px 20px; 
+    cursor: pointer; 
+    border-radius: 5px; 
+    margin: 0 10px; 
+  }
