--- a/front-end/src/styles/Style.css
+++ b/front-end/src/styles/Style.css
@@ -3,63 +3,41 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px solid black;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px; 
-    height: 76px; 
-    left: 1135px; 
-    top: 97px; 
+    width: 19vw; 
+    height: 13vh; 
+    left: 78vw; 
+    top: 15vh; 
 }
-  
-  .button-sair {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 30px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
-    position: absolute;
-    width: 48px;
-    height: 19px;
-    font-size: 14px;
-    left: 32px;
-    top: 608px;
-  }
 
   .button-pre{
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 1135px;
-    top: 293px;
+    width: 19vw;
+    height: 13vh; 
+    left: 78vw;
+    top: 48vh;
   }
 
   .button-filtros{
@@ -67,20 +45,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 1135px;
-    top: 195px;
+    width: 19vw;
+    height: 13vh;
+    left: 78vw;
+    top: 31.5vh;
 }
 
   .button-cancelar{
@@ -88,20 +66,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 1135px;
-    top: 488px;
+    width: 19vw;
+    height: 13vh;
+    left: 78vw;
+    top: 75vh;
   }
 
   .button-cancelar-pre{
@@ -109,20 +87,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 1092px;
-    top: 512px;
+    width: 19vw;
+    height: 13vh;
+    left: 78vw;
+    top: 75vh;
   }
   
   .button-finalizar{
@@ -193,20 +171,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 1092px;
-    top: 60px;
+    width: 19vw;
+    height: 13vh;
+    left: 78vw;
+    top: 10vh;
   }
 
   .button-voltar{
