--- a/front-end/src/styles/Style.css
+++ b/front-end/src/styles/Style.css
@@ -9,7 +9,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -30,7 +30,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -51,7 +51,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -72,7 +72,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -93,7 +93,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -114,7 +114,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40px;
     border: 1px black solid;
     position: absolute;
@@ -129,20 +129,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 360px;
-    top: 327px;
+    width: 19vw;
+    height: 13vh;
+    left: 26vw;
+    top: 53vh;
   }
 
   .button-evento{
@@ -150,20 +150,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 865px;
-    top: 327px;
+    width: 19vw;
+    height: 13vh;
+    left: 63vw;
+    top: 53vh;
   }
 
   .button-publicar{
@@ -177,7 +177,7 @@
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
     border-radius: 40vw;
     border: 0.05vw solid black;
     position: absolute;
@@ -192,20 +192,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 612.5px;
-    top: 470px;
+    width: 19vw;
+    height: 13vh;
+    left: 45vw;
+    top: 80vh;
   }
 
   .popup-background {
