--- a/front-end/src/styles/Style.css
+++ b/front-end/src/styles/Style.css
@@ -108,20 +108,20 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 30px;
+    font-size: 200%;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     word-wrap: break-word;
     cursor: pointer;
     background: #820B8A;
     box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    border: 1px black solid;
+    border-radius: 40vw;
+    border: 0.05vw solid black;
     position: absolute;
-    width: 258px;
-    height: 76px;
-    left: 937px;
-    top: 434px;
+    width: 19vw;
+    height: 13vh;
+    left: 70vw;
+    top: 70vh;
   }
 
   .button-artista{
