--- a/front-end/src/styles/login.module.css
+++ b/front-end/src/styles/login.module.css
@@ -47,7 +47,12 @@ h2 {
     color: white;
     border: none;
     box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
 
+}
+.submitButton:hover{
+    transform: scale(1.1); /* Aumenta o tamanho em 20% ao passar o mouse */
+    transition: 0.4s;
 }
 
 .ContainersubmitButton {
@@ -89,6 +94,11 @@ h5 {
     align-items: center;
     justify-content: center;
     font-family: "Poppins", sans-serif;
+    cursor: pointer;
+}
+.BotaoCriarConta:hover{
+    transform: scale(1.1); /* Aumenta o tamanho em 20% ao passar o mouse */
+    transition: 0.4s;
 }
 
 img {
