--- a/front-end/src/styles/criarConta.module.css
+++ b/front-end/src/styles/criarConta.module.css
@@ -52,7 +52,12 @@ h1 {
     border-radius: 2rem;
     border: none;
     box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
 
+}
+.submitButton:hover{
+    transform: scale(1.1); /* Aumenta o tamanho em 20% ao passar o mouse */
+    transition: 0.4s;
 }
 
 .ContainersubmitButton {
