--- a/front-end/src/styles/Style.css
+++ b/front-end/src/styles/Style.css
@@ -1,269 +1,136 @@
-  .button-anexar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw; 
-    height: 13vh; 
-    left: 78vw; 
-    top: 15vh; 
+.popup-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);/
 }
 
-  .button-pre{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh; 
-    left: 78vw;
-    top: 48vh;
-  }
-
-  .button-filtros{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 78vw;
-    top: 31.5vh;
+.popup-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 200%;
+  gap: 5vh;
 }
 
-  .button-cancelar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 78vw;
-    top: 75vh;
-  }
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  gap: 5vh;
+}
 
-  .button-cancelar-pre{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 78vw;
-    top: 75vh;
-  }
-  
-  .button-finalizar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 70vw;
-    top: 70vh;
-  }
+.popup-actions {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: 2.5vh;
+}
 
-  .button-artista{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 26vw;
-    top: 53vh;
-  }
+.pop-yes-button,
+.pop-no-button {
+  background-color: #820B8A;
+  color: white;
+  border: none;
+  padding: 2.5vh 5vh;
+  cursor: pointer;
+  border-radius: 3vh;
+  margin: 0 5vh;
+}
 
-  .button-evento{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 63vw;
-    top: 53vh;
-  }
+.date-picker {
+  background-color: #ffffff;
+  /* Cor de fundo da caixa */
+  border: 0.4vh solid #ff0054;
+  /* Cor da borda */
+  color: #000;
+  /* Cor do texto */
+  font-size: 100%;
+  padding: 2vh;
+  border-radius: 2vh;
+}
 
-  .button-publicar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 78vw;
-    top: 10vh;
-  }
+/* Alterando o estilo do placeholder (o texto "Selecione uma data") */
+.date-picker::placeholder {
+  color: #ff0054;
+  /* Cor do placeholder */
+  opacity: 1;
+  /* Garante que a cor seja aplicada corretamente */
+}
 
-  .button-voltar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer;
-    background: #820B8A;
-    box-shadow: 0vh 0.5vw 0.8vh rgba(0, 0, 0, 0.25);
-    border-radius: 40vw;
-    border: 0.05vw solid black;
-    position: absolute;
-    width: 19vw;
-    height: 13vh;
-    left: 45vw;
-    top: 80vh;
-  }
 
-  .popup-background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /
-  }
-  
-  .popup-container {
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 200%;
-    gap: 5vh;
-  }
 
-  .buttons-container {
-    display: flex;
-    justify-content: center; 
-    gap: 5vh; 
-  }
-  
-  .popup-actions {
-    display: flex;
-    justify-content: space-around; 
-    width: 100%; 
-    padding: 2.5vh;
-  }
 
-  .pop-yes-button, .pop-no-button {
-    background-color: #820B8A; 
-    color: white; 
-    border: none; 
-    padding: 2.5vh 5vh; 
-    cursor: pointer; 
-    border-radius: 3vh; 
-    margin: 0 5vh; 
-  }
 
-  .date-picker {
-    background-color: #ffffff; /* Cor de fundo da caixa */
-    border: 0.4vh solid #ff0054; /* Cor da borda */
-    color: #000; /* Cor do texto */
-    font-size: 100%;
-    padding: 2vh;
-    border-radius: 2vh;
-  }
-  
-  /* Alterando o estilo do placeholder (o texto "Selecione uma data") */
-  .date-picker::placeholder {
-    color: #ff0054; /* Cor do placeholder */
-    opacity: 1; /* Garante que a cor seja aplicada corretamente */
-  }
+
+
+.container {
+  display: flex;
+  width: 100%;
+}
+
+.containerCriarPublicacao {
+  display: flex;
+  width: 91%;
+  flex-direction: row;
+}
+
+.texto {
+  display: flex;
+  width: 70%;
+  align-items: center;
+  justify-content: center;
+  border: none;
+
+}
+
+.botoes {
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20%
+}
+
+.botoes1 {
+  display: flex;
+  height: 20%;
+  width: 48%;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 9%;
+}
+
+textarea {
+  padding: 3%;
+  width: 85%;
+  font-family: "Poppins", sans-serif;
+  height: 50%;
+  border: solid #820B8A;
+  border-radius: 1rem;
+}
+
+.button-base {
+  display: flex;
+  background-color: #820B8A;
+  width: 100%;
+  height: 43%;
+  color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.575);
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+}
+.button-base:hover{
+  transform: scale(1.05); /* Aumenta o tamanho em 20% ao passar o mouse */
+  transition: 0.4s;
+}
