--- a/front-end/src/styles/Style.css
+++ b/front-end/src/styles/Style.css
@@ -87,7 +87,6 @@
   align-items: center;
   justify-content: center;
   border: none;
-
 }
 
 .botoes {
@@ -131,6 +130,97 @@ textarea {
 
 }
 .button-base:hover{
+  transform: scale(1.05); /* Aumenta o tamanho em 20% ao passar o mouse */
+  transition: 0.4s;
+}
+
+.containerPreVisual {
+  display: flex;
+  width: 91%;
+  flex-direction: row;
+}
+
+.imagemContainer {
+  display: flex;
+  width: 0;
+  height: 0;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+.textoPreVisual {
+  display: flex;
+  width: 70%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+.publicacao{
+  border: solid #820B8A;
+  border-radius: 1rem;
+  padding: 3%;
+  font-family: "Poppins", sans-serif;
+  width: 50%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 1%;
+}
+
+.publicacao img{
+  max-width: 3rem;
+  max-height: 3rem;
+  object-fit: cover;
+}
+
+.texto_sel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font: "Poppins", sans-serif;
+  font-weight: 400;
+  text-align: center; 
+  color: black;
+  flex-direction: column;
+}
+
+.botoes2 {
+  flex-direction: row;
+  display: flex;
+  height: 30%;
+  width: 48%;
+  justify-content: space-around;
+  gap: 20%;
+  align-items: center;
+}
+
+.botoes3 {
+  display: flex;
+  width: 100%;
+  height: 75%;
+  flex-direction: column;
+  gap: 20%;
+  align-items: center;
+}
+
+.botoes2 button {
+  display: flex;
+  background-color: #820B8A;
+  width: 30%;
+  height: 43%;
+  color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.575);
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+  border-width: 0;
+}
+
+.botoes2 button:hover{
   transform: scale(1.05); /* Aumenta o tamanho em 20% ao passar o mouse */
   transition: 0.4s;
 }
