--- a/front-end/src/styles/filtro.module.css
+++ b/front-end/src/styles/filtro.module.css
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     width: 100%;
-    height: 100%;
 }
 
 .container2 {
@@ -22,9 +21,6 @@
 
 .containerSeleção {
     margin-bottom: 2%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
 .filtro {
@@ -42,13 +38,13 @@
     background: rgba(255, 0, 84, 0.19);
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.21);
     font-size: 0.8rem;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
     cursor: pointer;
 }
 
 .containerFiltros label {
     color: black;
-    padding: 0.2rem 0;
+    padding: 1%;
     margin: 0;
     font-size: 0.7rem;
 }
