--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -61,6 +61,7 @@ nav {
     background: #820B8A;
     color: white;
     font-family: "Poppins", sans-serif; 
+    cursor: pointer;
 }
 .logoutButton:hover {
     transform: scale(1.05); /* Aumenta o tamanho em 20% ao passar o mouse */
@@ -72,7 +73,7 @@ nav {
 .modalOverlay {
     position: fixed;
     top: 0;
-    left: 9.22%;
+    left: 9.2%;
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.582);
@@ -84,12 +85,19 @@ nav {
 
 .modalContent {
     background: white;
-    padding: 20px;
+    padding: 1%;
     border-radius: 8px;
     border: solid #FF0054;
     border-left: none;
-    width: 40%;
+    width: 25%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+.modalContent input{
+    width: 80%;
+    background-color:  rgba(255, 0, 84, 0.19);
+    color: black;
+    padding: 4% 7%;
+
 }
 
 .closeButton {
@@ -99,4 +107,73 @@ nav {
     cursor: pointer;
     display: block;
     margin-left: auto;
+}
+
+.listaPerfil{
+    display: flex;
+    height: 49vh;
+    list-style-type: none;
+    overflow-y: auto;
+    gap: 6%;
+    flex-direction: column;
+    padding: 2% 5%;
+}
+
+.listaPerfil li{
+    display: flex;
+    background: #FF5400;
+    border-radius: 1rem;
+    cursor: pointer;
+    flex-direction: column;
+}
+.listaPerfil li .container{
+    display: flex;
+    align-items: center;
+    padding: 5% 5% 0%;
+    gap: 4%;
+}
+.listaPerfil li img{
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.listaPerfil li p{
+    font-size: 0.8rem;
+    margin: 0;
+    padding: 2% 7%;
+}
+
+
+
+.listaPerfil::-webkit-scrollbar {
+    width: 1.2vw; /* Largura da barra de rolagem */
+}
+
+.listaPerfil::-webkit-scrollbar-track {
+    background: #e6e6e6; /* Cor do fundo da barra de rolagem */
+    border-radius: 4rem;
+}
+
+
+.listaPerfil::-webkit-scrollbar-thumb {
+    background: #820B8A; /* Cor da parte que pode ser arrastada */
+    border-radius: 4rem; /* Bordas arredondadas */
+}
+
+.listaPerfil::-webkit-scrollbar-thumb:hover {
+    background: #b800c5; /* Cor quando o mouse está sobre a barra */
+}
+
+.resetButton{
+    display: block;
+    margin: auto;
+    width: 64%;
+    background-color: #820B8A;
+    color: white;
+    border: none;
+    padding: 4% 5%;
+    font-size: 0.7rem;
+    font-family: "Poppins", sans-serif;
+    border-radius: 1rem;
 }
