--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffff;
   background-color: #242424;
 
   font-synthesis: none;
@@ -25,9 +25,12 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  flex-direction: column; /* Se precisar empilhar os elementos verticalmente */
+  justify-content: flex-start; /* Alinhar o conteúdo ao topo */
+  align-items: stretch; /* Permitir que o conteúdo ocupe toda a largura */
+  background-color: #ffffff; /* Mantendo o fundo claro no modo claro */
 }
 
 h1 {
@@ -57,12 +60,14 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ffffff
+;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #ffffff
+;
   }
 }
