--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,73 +1,17 @@
-:root {
-  font-family: "Poppins", sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: #ffffff;
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html, body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-  flex-direction: column; /* Se precisar empilhar os elementos verticalmente */
-  justify-content: flex-start; /* Alinhar o conteúdo ao topo */
-  align-items: stretch; /* Permitir que o conteúdo ocupe toda a largura */
-  background-color: #ffffff; /* Mantendo o fundo claro no modo claro */
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  padding: 0;
+  background-color: white;
   font-family: "Poppins", sans-serif;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  overflow-x: hidden; 
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff
-;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #ffffff
-;
-  }
+#root{
+  display: flex;
+  height: auto;
+  max-width: none;
+  max-height: none;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
