--- a/front-end/src/styles/navbar.module.css
+++ b/front-end/src/styles/navbar.module.css
@@ -11,8 +11,8 @@ nav {
     justify-content: center;
 }
 .profile img{
-    width: 3.5em;
-    height: 3.5rem;
+    width: 5.5vw;
+    height: 5.5vw;
     object-fit: cover;
     border-radius: 50%;
     cursor:pointer;
