--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -70,7 +70,7 @@ body {
   color: white;
   border: none;
   cursor: pointer;
-  font-size: 32px;
+  font-size: 26px;
   transition: background-color 0.3s ease;
   margin-top: 600px;
   background-color: #820B8A; /* Cor roxa */
@@ -78,6 +78,7 @@ body {
   margin-right: 20px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   font-family: "Poppins", sans-serif;
+  white-space: nowrap;
 }
 
 .create-event-btn:hover {
@@ -96,7 +97,7 @@ body {
 
 /* Estilos específicos para o calendário */
 .calendar-container {
-  width: 60%;
+  width: 80%;
   margin-left: 200px; /* Alinha o calendário à direita */
   margin-right: 20px; /* Espaço entre o calendário e a borda da tela */
   height: 85vh; /* Usa 85% da altura da tela para melhor visualização */
@@ -188,7 +189,6 @@ body {
 }
 
 .rbc-event {
-  background-color: #820B8A;
   border-radius: 10px;
   padding: 5px;
   font-family: 'Poppins', sans-serif;
@@ -215,8 +215,8 @@ body {
 
 /* Estilos para Próximo Eventos */
 .upcoming-events {
-  margin-top: 600px;
-  margin-left: -268px;
+  margin-top: 550px;
+  margin-left: -250px;
 }
 
 
@@ -268,3 +268,97 @@ body {
   font-family: 'Poppins', sans-serif; 
 }
 
+@media (max-width: 1442px) {
+  .calendar-container {
+    width: 300%;
+    margin-left: 0;
+    margin-top: 90px;
+    padding: 10px;
+  }
+  .rbc-toolbar{
+    padding: 0%;
+  }
+  .create-event-btn {
+    font-size: 18px;
+    padding: 10px 15px;
+    margin-top: 400px;
+    white-space: nowrap;
+    margin-right: -180px;
+  }
+
+  .upcoming-events {
+    margin-left: 0;
+    margin-top: 350px;
+    width: 100%;
+  }
+
+  .upcoming-events h5 {
+    font-size: 18px;
+    padding: 8px 15px;
+  }
+
+  .upcoming-events li {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .calendar-container {
+    width: 300%;
+    margin-left: 0;
+    margin-top: 90px;
+    padding: 10px;
+  }
+
+  .create-event-btn {
+    font-size: 18px;
+    padding: 10px 15px;
+    margin-top: 400px;
+    white-space: nowrap;
+    margin-right: -180px;
+  }
+
+  
+}
+
+@media (max-width: 685px) {
+  .create-event-btn {
+    font-size: 10px;
+    padding: 8px 12px;
+    margin-right: 1px;
+    margin-left: -50px;
+  }
+
+  .upcoming-events{
+    margin-left: -110px;
+  }
+
+  .upcoming-events h5 {
+    font-size: 10px;
+  }
+
+  .upcoming-events li {
+    font-size: 10px;
+  }
+
+  @media (max-width: 685px) {
+    .create-event-btn {
+      font-size: 8px;
+      padding: 8px 12px;
+      margin-right: 0.5px;
+      margin-left: -120px;
+    }
+  
+    .upcoming-events{
+      margin-left: -95px;
+    }
+  
+    .upcoming-events h5 {
+      font-size: 8px;
+    }
+  
+    .upcoming-events li {
+      font-size: 8px;
+    }
+  }
+}
